Code Refactoring for Pagination and some bug fixes